# plugin-GUI

./: CMakeLists.txt
Plugins/: CMakeLists.txt  PluginRules.cmake
Plugins/CommonAverageRef/: CMakeLists.txt  CommonAverageRefTests.cpp
Plugins/FilterNode/: CMakeLists.txt  FilterNode.h  FilterNodeTests.cpp  test_main.cpp
Plugins/LfpDisplayNode/: LfpDisplayNode.cpp  LfpDisplayNode.h  LfpDisplayOptions.cpp  LfpDisplayOptions.h
Source/: AccessClass.cpp  AccessClass.h  Main.cpp  MainWindow.cpp  MainWindow.h  TestableExport.h
Source/Test/: TestRunner.cpp  TestRunner.h
Source/UI/: ControlPanel.cpp  EditorViewport.cpp  ProcessorList.cpp  ProcessorList.h  UIComponent.cpp  UIComponent.h
Source/Utils/: BroadcastParser.cpp  BroadcastParser.h  BroadcastPayload.h
TestHelpers/: CMakeLists.txt
TestHelpers/Application/: StubAccessClass.h
TestHelpers/Processors/: CMakeLists.txt  FakeSourceNode.cpp  FakeSourceNode.h
TestHelpers/include/: FakeProcessors.h  NonAPIHeaders.h  TestFixtures.h
Tests/: ComponentRules.cmake
Tests/Juce/: AudioBufferTests.cpp  AudioProcessorGraphTests.cpp  ChangeBroadcasterTests.cpp  ChangeListenerTests.cpp  MidiBufferTests.cpp  TimerTests.cpp
Tests/Processors/: CMakeLists.txt  ChannelInfoObjectTests.cpp  ContinuousChannelTests.cpp  DataBufferTests.cpp  DataThreadTests.cpp  EventChannelTests.cpp  EventTests.cpp  GenericProcessorTests.cpp  InfoObjectTests.cpp  MessageCenterTests.cpp  MetadataEventLockTests.cpp  MetadataEventObjectTests.cpp  MetadataEventTests.cpp  ParameterOwnerTests.cpp  PluginClassTests.cpp  PluginManagerTests.cpp  (+3 more)
(+25 files in other folders)
